--- a/main.bib
+++ b/main.bib
@@ -69,7 +69,7 @@
   number = {3},
   pages = {235--253},
   publisher = {Elsevier},
-  title = {{All-Uses Vs Mutation Testing: An Experimental Comparison of Effectiveness}},
+  title = {{All-Uses vs Mutation Testing: An Experimental Comparison of Effectiveness}},
   volume = {38},
   year = {1997},
 }
@@ -104,7 +104,7 @@
   doi = {10.1109/tse.1984.5010193},
   journal = {{IEEE Transactions on Software Engineering}},
   number = {1},
-  pages = {21--4},
+  pages = {4--21},
   publisher = {IEEE},
   title = {{Software Engineering Economics}},
   year = {1984},
@@ -170,9 +170,9 @@
   doi = {10.1145/320434.320440},
   journal = {{ACM Transactions on Database Systems}},
   number = {1},
-  pages = {36--9},
+  pages = {9--36},
   publisher = {ACM},
-  title = {{The Entity-Relationship Model---Toward a Unified View of Data}},
+  title = {{The Entity-Relationship Model --- Toward a Unified View of Data}},
   volume = {1},
   year = {1976},
 }
@@ -595,10 +595,10 @@
 
 @book{martin2008clean,
   author = {Martin, Robert C.},
+  doi = {10.5555/1388398},
   publisher = {Pearson Education},
   title = {{Clean Code: A Handbook of Agile Software Craftsmanship}},
   year = {2008},
-  doi={10.5555/1388398}
 }
 
 @inproceedings{barnett2016relationship,
@@ -779,7 +779,7 @@
 
 @inproceedings{graves1998inferring,
   author = {Graves, Todd L. and Mockus, Audris},
-  booktitle = {{Proceedings of the Fifth International Software Metrics Symposium}},
+  booktitle = {{Proceedings of the 5th International Software Metrics Symposium}},
   doi = {10.1109/metric.1998.731253},
   organization = {IEEE},
   pages = {267--273},
@@ -854,7 +854,7 @@
 @misc{micco2016,
   author = {Micco, John},
   howpublished = {\url{https://testing.googleblog.com/2016/05/flaky-tests-at-google-and-how-we.html}},
-  month = {May},
+  month = {may},
   note = {[Online; accessed 25-02-2024]},
   title = {{Flaky Tests at Google and How We Mitigate Them}},
   year = {2016},
@@ -956,7 +956,7 @@
 @misc{bugayenko2014blog0813,
   author = {Bugayenko, Yegor},
   howpublished = {\url{https://www.yegor256.com/140813.html}},
-  month = {August},
+  month = {aug},
   note = {[Online; accessed 26-02-2024]},
   title = {{Strict Control of Java Code Quality}},
   year = {2014},
@@ -978,7 +978,7 @@
   journal = {{Empirical Software Engineering}},
   pages = {3871--3903},
   publisher = {Springer},
-  title = {{How Does Code Style Inconsistency Affect Pull Request Integration? an Exploratory Study on 117 GitHub Projects}},
+  title = {{How Does Code Style Inconsistency Affect Pull Request Integration? An Exploratory Study on 117 GitHub Projects}},
   volume = {24},
   year = {2019},
 }
@@ -1181,7 +1181,7 @@
   author = {Campbell, G. Ann},
   doi = {10.1145/3194164.3194186},
   publisher = {Sonar},
-  title = {{\{Cognitive Complexity\} --- a New Way of Measuring Understandability}},
+  title = {{\{Cognitive Complexity\} --- A New Way of Measuring Understandability}},
   year = {2017},
 }
 
@@ -1278,7 +1278,7 @@
   booktitle = {{Proceedings of the Conference on Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA)}},
   doi = {10.1145/157710.157715},
   pages = {29--30},
-  title = {{Experience Report --- the WyCash Portfolio Management System}},
+  title = {{Experience Report --- The WyCash Portfolio Management System}},
   year = {1992},
 }
 
@@ -1286,18 +1286,18 @@
   author = {Coleman, Don and Ash, Dan and Lowther, Bruce and Oman, Paul},
   doi = {10.1109/2.303623},
   journal = {{Computer}},
+  number = {8},
   publisher = {IEEE},
   title = {{Using Metrics to Evaluate Software System Maintainability}},
+  volume = {27},
   year = {1994},
-  volume={27},
-  number={8},
 }
 
 @misc{niedermayr2016,
   author = {Niedermayr, Rainer},
   howpublished = {\url{https://teamscale.com/blog/en/news/blog/maintainability-index}},
   note = {[Online; accessed 15-03-2024]},
-  title = {{Why We Don’t Use the Software Maintainability Index}},
+  title = {{Why We Don't Use the Software Maintainability Index}},
   year = {2016},
 }
 
@@ -1355,9 +1355,9 @@
 
 @inproceedings{mubarak2010,
   author = {Mubarak, A. and Counsell, S. and Hierons, R.M.},
-  booktitle = {{Proceedings of the Fourth International Conference on Research Challenges in Information Science (RCIS)}},
+  booktitle = {{Proceedings of the 4th International Conference on Research Challenges in Information Science (RCIS)}},
   doi = {10.1109/rcis.2010.5507329},
-  title = {{An Evolutionary Study of Fan-In and Fan-Out Metrics in OSS}},
+  title = {{An Evolutionary Study of Fan-in and Fan-Out Metrics in OSS}},
   year = {2010},
 }
 
@@ -1420,7 +1420,7 @@
 
 @inproceedings{livieri2007,
   author = {Livieri, Simone and Higo, Yoshiki and Matsushita, Makoto and Inoue, Katsuro},
-  booktitle = {{Proceedings of the Fourth International Workshop on Mining Software Repositories (MSR’07:ICSE Workshops 2007)}},
+  booktitle = {{Proceedings of the 4th International Workshop on Mining Software Repositories (MSR'07:ICSE Workshops 2007)}},
   doi = {10.1109/msr.2007.1},
   title = {{Analysis of the Linux Kernel Evolution Using Code Clone Coverage}},
   year = {2007},
@@ -1569,7 +1569,7 @@
   doi = {10.1109/ICSE.2013.6606613},
   organization = {IEEE},
   pages = {672--681},
-  title = {{Why Don’t Software Developers Use Static Analysis Tools to Find Bugs?}},
+  title = {{Why Don't Software Developers Use Static Analysis Tools to Find Bugs?}},
   year = {2013},
 }
 
@@ -1769,166 +1769,165 @@
 }
 
 @article{arcelli2016comparing,
-  title={{Comparing and Experimenting Machine Learning Techniques for Code Smell Detection}},
-  author={Arcelli Fontana, Francesca and M{\"a}ntyl{\"a}, Mika V. and Zanoni, Marco and Marino, Alessandro},
-  journal={{Empirical Software Engineering}},
-  volume={21},
-  pages={1143--1191},
-  year={2016},
-  publisher={Springer},
-  doi={10.1007/s10664-015-9378-4}
+  author = {Arcelli Fontana, Francesca and M{\"a}ntyl{\"a}, Mika V. and Zanoni, Marco and Marino, Alessandro},
+  doi = {10.1007/s10664-015-9378-4},
+  journal = {{Empirical Software Engineering}},
+  pages = {1143--1191},
+  publisher = {Springer},
+  title = {{Comparing and Experimenting Machine Learning Techniques for Code Smell Detection}},
+  volume = {21},
+  year = {2016},
 }
 
 @inproceedings{di2018detecting,
-  title={{Detecting Code Smells using Machine Learning Techniques: Are We There Yet?}},
-  author={Di Nucci, Dario and Palomba, Fabio and Tamburri, Damian A and Serebrenik, Alexander and De Lucia, Andrea},
-  booktitle={{Proceedings of the 25th International Conference on Software Analysis, Evolution and Reengineering (SANER)}},
-  pages={612--621},
-  year={2018},
-  organization={IEEE},
-  doi={10.1109/SANER.2018.8330266}
+  author = {Di Nucci, Dario and Palomba, Fabio and Tamburri, Damian A. and Serebrenik, Alexander and De Lucia, Andrea},
+  booktitle = {{Proceedings of the 25th International Conference on Software Analysis, Evolution and Reengineering (SANER)}},
+  doi = {10.1109/SANER.2018.8330266},
+  organization = {IEEE},
+  pages = {612--621},
+  title = {{Detecting Code Smells Using Machine Learning Techniques: Are We There Yet?}},
+  year = {2018},
 }
 
 @inproceedings{rahman2024flakesync,
-  title={{FlakeSync: Automatically Repairing Async Flaky Tests}},
-  author={Rahman, Shanto and Shi, August},
-  booktitle={{Proceedings of the 46th International Conference on Software Engineering (ICSE)}},
-  pages={920--920},
-  year={2024},
-  organization={IEEE},
+  author = {Rahman, Shanto and Shi, August},
+  booktitle = {{Proceedings of the 46th International Conference on Software Engineering (ICSE)}},
+  organization = {IEEE},
+  pages = {920},
+  title = {{FlakeSync: Automatically Repairing Async Flaky Tests}},
+  year = {2024},
 }
 
 @article{gill1991cyclomatic,
-  title={{Cyclomatic Complexity Density and Software Maintenance Productivity}},
-  author={Gill, Geoffrey K. and Kemerer, Chris F.},
-  journal={{IEEE Transactions on Software Engineering}},
-  volume={17},
-  number={12},
-  pages={1284--1288},
-  year={1991},
-  doi={10.1109/32.106988}
+  author = {Gill, Geoffrey K. and Kemerer, Chris F.},
+  doi = {10.1109/32.106988},
+  journal = {{IEEE Transactions on Software Engineering}},
+  number = {12},
+  pages = {1284--1288},
+  title = {{Cyclomatic Complexity Density and Software Maintenance Productivity}},
+  volume = {17},
+  year = {1991},
 }
 
 @article{pfleeger2008software,
-  title={{Software Metrics: Progress After 25 Years?}},
-  author={Pfleeger, Shari Lawrence},
-  journal={{IEEE Software}},
-  volume={25},
-  number={6},
-  pages={32--34},
-  year={2008},
-  publisher={IEEE},
-  doi={10.1109/MS.2008.160}
+  author = {Pfleeger, Shari Lawrence},
+  doi = {10.1109/MS.2008.160},
+  journal = {{IEEE Software}},
+  number = {6},
+  pages = {32--34},
+  publisher = {IEEE},
+  title = {{Software Metrics: Progress After 25 Years?}},
+  volume = {25},
+  year = {2008},
 }
 
 @inproceedings{vassallo2017tale,
-  title={{A Tale of CI Build Failures: An Open Source and a Financial Organization
-Perspective}},
-  author={Vassallo, Carmine and Schermann, Gerald and Zampetti, Fiorella and Romano, Daniele and Leitner, Philipp and Zaidman, Andy and Di Penta, Massimiliano and Panichella, Sebastiano},
-  booktitle={{Proceedings of the International Conference on Software Maintenance and Evolution (ICSME)}},
-  pages={183--193},
-  year={2017},
-  organization={IEEE},
-  doi={10.1109/ICSME.2017.67}
+  author = {Vassallo, Carmine and Schermann, Gerald and Zampetti, Fiorella and Romano, Daniele and Leitner, Philipp and Zaidman, Andy and Di Penta, Massimiliano and Panichella, Sebastiano},
+  booktitle = {{Proceedings of the International Conference on Software Maintenance and Evolution (ICSME)}},
+  doi = {10.1109/ICSME.2017.67},
+  organization = {IEEE},
+  pages = {183--193},
+  title = {{A Tale of CI Build Failures: An Open Source and a Financial Organization Perspective}},
+  year = {2017},
 }
 
 @inproceedings{liu2022first,
-  title={{A First Look at CI/CD Adoptions in Open-Source Android Apps}},
-  author={Liu, Pei and Sun, Xiaoyu and Zhao, Yanjie and Liu, Yonghui and Grundy, John and Li, Li},
-  booktitle={{Proceedings of the 37th International Conference on Automated Software Engineering}},
-  pages={1--6},
-  year={2022},
-  doi={10.1145/3551349.3561341}
+  author = {Liu, Pei and Sun, Xiaoyu and Zhao, Yanjie and Liu, Yonghui and Grundy, John and Li, Li},
+  booktitle = {{Proceedings of the 37th International Conference on Automated Software Engineering}},
+  doi = {10.1145/3551349.3561341},
+  pages = {1--6},
+  title = {{A First Look at CI/CD Adoptions in Open-Source Android Apps}},
+  year = {2022},
 }
 
 @inproceedings{santos2016judging,
-  title={{Judging a commit by its cover: Correlating commit message entropy with build status on Travis-CI}},
-  author={Santos, Eddie Antonio and Hindle, Abram},
-  year={2016},
-  pages={504-507},
-  booktitle={{Proceedings of the 13th Working Conference on Mining Software Repositories (MSR)}},
-  doi={10.7939/r3-h4d8-ej76}
+  author = {Santos, Eddie Antonio and Hindle, Abram},
+  booktitle = {{Proceedings of the 13th Working Conference on Mining Software Repositories (MSR)}},
+  doi = {10.7939/r3-h4d8-ej76},
+  pages = {504--507},
+  title = {{Judging a Commit by Its Cover: Correlating Commit Message Entropy With Build Status on Travis-CI}},
+  year = {2016},
 }
 
 @inproceedings{golzadeh2022rise,
-  title={{On the rise and fall of CI services in GitHub}},
-  author={Golzadeh, Mehdi and Decan, Alexandre and Mens, Tom},
-  booktitle={{Proceedings of the International Conference on Software Analysis, Evolution and Reengineering (SANER)}},
-  pages={662--672},
-  doi={10.1109/SANER53432.2022.00084},
-  year={2022},
-  organization={IEEE}
+  author = {Golzadeh, Mehdi and Decan, Alexandre and Mens, Tom},
+  booktitle = {{Proceedings of the International Conference on Software Analysis, Evolution and Reengineering (SANER)}},
+  doi = {10.1109/SANER53432.2022.00084},
+  organization = {IEEE},
+  pages = {662--672},
+  title = {{On the Rise and Fall of CI Services in GitHub}},
+  year = {2022},
 }
 
 @article{graylin2009cyclomatic,
-  title={{Cyclomatic Complexity and Lines of Code: Empirical Evidence of a Stable Linear Relationship}},
-  author={Graylin, Jay and Hale, Joanne E. and Smith, Randy K. and David, Hale and Kraft, Nicholas A. and Charles, Ward},
-  journal={{Journal of Software Engineering and Applications}},
-  volume={2},
-  number={03},
-  pages={137},
-  year={2009},
-  publisher={Scientific Research Publishing},
-  doi={10.4236/jsea.2009.23020}
+  author = {Graylin, Jay and Hale, Joanne E. and Smith, Randy K. and David, Hale and Kraft, Nicholas A. and Charles, Ward},
+  doi = {10.4236/jsea.2009.23020},
+  journal = {{Journal of Software Engineering and Applications}},
+  number = {3},
+  pages = {137},
+  publisher = {Scientific Research Publishing},
+  title = {{Cyclomatic Complexity and Lines of Code: Empirical Evidence of a Stable Linear Relationship}},
+  volume = {2},
+  year = {2009},
 }
 
 @misc{muslija2018correlation,
-  title={{On the Correlation between Testing Effort and Software Complexity Metrics}},
-  author={Muslija, Adnan and Enoiu, Eduard P.},
-  year={2018},
-  organization={{PeerJ Preprints}}
+  author = {Muslija, Adnan and Enoiu, Eduard P.},
+  organization = {PeerJ Preprints},
+  title = {{On the Correlation Between Testing Effort and Software Complexity Metrics}},
+  year = {2018},
 }
 
 @inproceedings{seront2005relationship,
-  title={{On the Relationship Between Cyclomatic Complexity and the Degree of Object Orientation}},
-  author={Seront, Gr{\'e}gory and Lopez, Miguel and Paulus, Val{\'e}rie and Habra, Naji},
-  booktitle={Proceedings of 9th ECOOP Workshop on Quantitative Approaches in Object-Oriented Software Engineering (QAOOSE)},
-  pages={109--117},
-  year={2005}
+  author = {Seront, Gr{\'e}gory and Lopez, Miguel and Paulus, Val{\'e}rie and Habra, Naji},
+  booktitle = {{Proceedings of 9th ECOOP Workshop on Quantitative Approaches in Object-Oriented Software Engineering (QAOOSE)}},
+  pages = {109--117},
+  title = {{On the Relationship Between Cyclomatic Complexity and the Degree of Object Orientation}},
+  year = {2005},
 }
 
 @article{abd2018,
-  title={{Calculating McCabe's Cyclomatic Complexity Metric and Its Effecct on the Quality Aspects of Software}},
-  author={Jader, Abd and Najm, Marwa and Mahmood, Riyadh Zaghlool},
-  volue={3},
-  number={5},
-  year={2018},
-  journal={{International Journal of Innovative Research and Creative Technology}}
+  author = {Jader, Abd and Najm, Marwa and Mahmood, Riyadh Zaghlool},
+  journal = {{International Journal of Innovative Research and Creative Technology}},
+  number = {5},
+  title = {{Calculating McCabe's Cyclomatic Complexity Metric and Its Effecct on the Quality Aspects of Software}},
+  year = {2018},
 }
 
 @inproceedings{meine2007correlations,
-  title={{Correlations between Internal Software Metrics and Software Dependability in a Large Population of Small C/C++ Programs}},
-  author={J. P. van der Meulen, Meine and Revilla, Miguel A.},
-  booktitle={{Proceedings of the 18th International Symposium on Software Reliability (ISSRE'07)}},
-  pages={203--208},
-  year={2007},
-  organization={IEEE}
+  author = {van der Meulen, Meine J. P. and Revilla, Miguel A.},
+  booktitle = {{Proceedings of the 18th International Symposium on Software Reliability (ISSRE'07)}},
+  organization = {IEEE},
+  pages = {203--208},
+  title = {{Correlations Between Internal Software Metrics and Software Dependability in a Large Population of Small C/C++ Programs}},
+  year = {2007},
 }
 
 @inproceedings{shin2008complexity,
-  title={{Is Complexity Really the Enemy of Software Security?}},
-  author={Shin, Yonghee and Williams, Laurie},
-  booktitle={Proceedings of the 4th ACM Workshop on Quality of Protection},
-  pages={47--50},
-  year={2008},
-  doi={10.1145/1456362.1456372}
+  author = {Shin, Yonghee and Williams, Laurie},
+  booktitle = {{Proceedings of the 4th Workshop on Quality of Protection}},
+  doi = {10.1145/1456362.1456372},
+  pages = {47--50},
+  title = {{Is Complexity Really the Enemy of Software Security?}},
+  year = {2008},
 }
 
 @inproceedings{hindle2008reading,
-  title={{Reading Beside the Lines: Indentation as a Proxy for Complexity Metrics}},
-  author={Hindle, Abram and Godfrey, Michael W. and Holt, Richard C.},
-  booktitle={{Proceedings of the 16th International Conference on Program Comprehension}},
-  pages={133--142},
-  year={2008},
-  organization={IEEE},
-  doi={10.1109/ICPC.2008.13}
+  author = {Hindle, Abram and Godfrey, Michael W. and Holt, Richard C.},
+  booktitle = {{Proceedings of the 16th International Conference on Program Comprehension}},
+  doi = {10.1109/ICPC.2008.13},
+  organization = {IEEE},
+  pages = {133--142},
+  title = {{Reading Beside the Lines: Indentation as a Proxy for Complexity Metrics}},
+  year = {2008},
 }
 
 @inproceedings{mamun2017correlations,
-  title={{Correlations of Software Code Metrics: An Empirical Study}},
-  author={Mamun, Md Abdullah Al and Berger, Christian and Hansson, J{\"o}rgen},
-  booktitle={{Proceedings of the 27th International Workshop on Software Measurement and the 12th International Conference on Software Process and Product Measurement}},
-  pages={255--266},
-  year={2017},
-  doi={10.1145/3143434.3143445}
+  author = {Mamun, Md Abdullah Al and Berger, Christian and Hansson, J{\"o}rgen},
+  booktitle = {{Proceedings of the 27th International Workshop on Software Measurement and the 12th International Conference on Software Process and Product Measurement}},
+  doi = {10.1145/3143434.3143445},
+  pages = {255--266},
+  title = {{Correlations of Software Code Metrics: An Empirical Study}},
+  year = {2017},
 }
+
