--- a/main.bib
+++ b/main.bib
@@ -145,8 +145,8 @@
 }
 
 @misc{iso20926,
-  author = {(ISO), International Stardardization Organization},
-  title = {{ISO/IEC 20926:2009, IFPUG Functional Size Measurement Method}},
+  author = {ISO, International Stardardization Organization},
+  title = {{ISO/IEC {20926:2009}, IFPUG Functional Size Measurement Method}},
   year = {2009},
 }
 
@@ -246,7 +246,7 @@
   doi = {10.1109/icse.2004.1317450},
   organization = {IEEE},
   pages = {282--291},
-  title = {{An Empirical Study of Software Reuse Vs. Defect-Density and Stability}},
+  title = {{An Empirical Study of Software Reuse vs. Defect-Density and Stability}},
   year = {2004},
 }
 
@@ -400,7 +400,7 @@
   journal = {{Information and Software Technology}},
   pages = {106847},
   publisher = {Elsevier},
-  title = {{Predicting the Precise Number of Software Defects: Are We There Yet?}},
+  title = {{Predicting the Precise Number of Software Defects: Are We There yet?}},
   volume = {146},
   year = {2022},
 }
@@ -1785,7 +1785,7 @@
   doi = {10.1109/SANER.2018.8330266},
   organization = {IEEE},
   pages = {612--621},
-  title = {{Detecting Code Smells Using Machine Learning Techniques: Are We There Yet?}},
+  title = {{Detecting Code Smells Using Machine Learning Techniques: Are We There yet?}},
   year = {2018},
 }
 
