--- a/main.bib
+++ b/main.bib
@@ -1249,7 +1249,7 @@
   author = {Bieman, James M. and Kang, Byung-Kyoo},
   doi = {10.1145/223427.211856},
   journal = {{SIGSOFT Software Engineering Notes}},
-  number = {SI},
+  number = {5I},
   pages = {259--262},
   publisher = {ACM},
   title = {{Cohesion and Reuse in an Object-Oriented System}},
@@ -1259,7 +1259,7 @@
 
 @inproceedings{curtis1979,
   author = {Curtis, Bill},
-  booktitle = {{Proceedings From the Fourth Summer Software Engineering Workshop}},
+  booktitle = {{Proceedings of the Fourth Summer Software Engineering Workshop}},
   pages = {217--238},
   title = {{Program Complexity and Software Errors: A Front End for Reliability}},
   year = {1979},
@@ -1313,7 +1313,7 @@
   author = {Gilboy, Tim},
   howpublished = {\url{https://sourcery.ai/blog/maintainability-index/}},
   note = {[Online; accessed 15-03-2024]},
-  title = {{Maintainability Index - What Is It and Where Does It Fall Short?}},
+  title = {{Maintainability Index --- What Is It and Where Does It Fall Short?}},
   year = {2022},
 }
 
@@ -1327,7 +1327,7 @@
 }
 
 @article{ardito2020,
-  author = {al., Luca Ardito et},
+  author = {Ardito, Luca and Coppola, Riccardo and Barbato, Luca and Verga, Diego},
   doi = {10.1155/2020/8840389},
   journal = {{Scientific Programming}},
   publisher = {Hindawi Limited},
