--- a/main.bib
+++ b/main.bib
@@ -1336,7 +1336,7 @@
 }
 
 @article{bansiya2002,
-  author = {Bansiya, J. and Davis, C.G.},
+  author = {Bansiya, J. and Davis, C. G.},
   doi = {10.1109/32.979986},
   journal = {{IEEE Transactions on Software Engineering}},
   publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
@@ -1354,7 +1354,7 @@
 }
 
 @inproceedings{mubarak2010,
-  author = {Mubarak, A. and Counsell, S. and Hierons, R.M.},
+  author = {Mubarak, A. and Counsell, S. and Hierons, R. M.},
   booktitle = {{Proceedings of the 4th International Conference on Research Challenges in Information Science (RCIS)}},
   doi = {10.1109/rcis.2010.5507329},
   title = {{An Evolutionary Study of Fan-in and Fan-Out Metrics in OSS}},
@@ -1420,7 +1420,7 @@
 
 @inproceedings{livieri2007,
   author = {Livieri, Simone and Higo, Yoshiki and Matsushita, Makoto and Inoue, Katsuro},
-  booktitle = {{Proceedings of the 4th International Workshop on Mining Software Repositories (MSR'07:ICSE Workshops 2007)}},
+  booktitle = {{Proceedings of the 4th International Workshop on Mining Software Repositories}},
   doi = {10.1109/msr.2007.1},
   title = {{Analysis of the Linux Kernel Evolution Using Code Clone Coverage}},
   year = {2007},
@@ -1469,7 +1469,7 @@
 }
 
 @misc{goode2014,
-  author = {al., Durham Goode et},
+  author = {Durham Goode, Rain},
   howpublished = {\url{https://engineering.fb.com/2014/01/07/core-infra/scaling-mercurial-at-facebook/}},
   note = {[Online; accessed 15-03-2024]},
   title = {{Scaling Mercurial at Facebook}},
@@ -1486,15 +1486,15 @@
 
 @inproceedings{mantyla2003,
   author = {Mantyla, M. and Vanhanen, J. and Lassenius, C.},
-  booktitle = {{Proceedings of the International Conference on Software Maintenance, 2003. ICSM 2003. Proceedings.}},
+  booktitle = {{Proceedings of the International Conference on Software Maintenance}},
   doi = {10.1109/icsm.2003.1235447},
   title = {{A Taxonomy and an Initial Empirical Study of Bad Smells in Code}},
   year = {2003},
 }
 
 @inproceedings{munson1998,
-  author = {Munson, J.C. and Elbaum, S.G.},
-  booktitle = {{Proceedings of the Proceedings. International Conference on Software Maintenance (Cat. No. 98CB36272)}},
+  author = {Munson, J. C. and Elbaum, S. G.},
+  booktitle = {{Proceedings of the International Conference on Software Maintenance}},
   doi = {10.1109/icsm.1998.738486},
   title = {{Code Churn: A Measure for Estimating the Impact of Code Change}},
   year = {1998},
@@ -1731,7 +1731,7 @@
   author = {Pradel, Michael and Sen, Koushik},
   doi = {10.1145/3276517},
   journal = {{Proceedings of the ACM on Programming Languages}},
-  number = {OOPSLA},
+  number = {1},
   pages = {1--25},
   publisher = {ACM},
   title = {{DeepBugs: A Learning Approach to Name-Based Bug Detection}},
@@ -1880,7 +1880,7 @@
 
 @inproceedings{seront2005relationship,
   author = {Seront, Gr{\'e}gory and Lopez, Miguel and Paulus, Val{\'e}rie and Habra, Naji},
-  booktitle = {{Proceedings of 9th ECOOP Workshop on Quantitative Approaches in Object-Oriented Software Engineering (QAOOSE)}},
+  booktitle = {{Proceedings of the 9th ECOOP Workshop on Quantitative Approaches in Object-Oriented Software Engineering (QAOOSE)}},
   pages = {109--117},
   title = {{On the Relationship Between Cyclomatic Complexity and the Degree of Object Orientation}},
   year = {2005},
