--- a/main.bib
+++ b/main.bib
@@ -1259,7 +1259,7 @@
 
 @inproceedings{curtis1979,
   author = {Curtis, Bill},
-  booktitle = {{Proceedings of the Fourth Summer Software Engineering Workshop}},
+  booktitle = {{Proceedings of the 4th Summer Software Engineering Workshop}},
   pages = {217--238},
   title = {{Program Complexity and Software Errors: A Front End for Reliability}},
   year = {1979},
