--- a/main.bib
+++ b/main.bib
@@ -262,7 +262,7 @@
 @misc{ieee982,
   author = {Board, IEEE Standards},
   doi = {10.1109/ieeestd.1989.122630},
-  title = {{IEEE Std 982.2-1988: Guide for the Use of IEEE Standard Dictionary of Measures to Produce Reliable Software}},
+  title = {{IEEE Std {982.2-1988}: Guide for the Use of IEEE Standard Dictionary of Measures to Produce Reliable Software}},
   year = {1989},
 }
 
@@ -446,7 +446,7 @@
 
 @inproceedings{fluri2007code,
   author = {Fluri, Beat and Wursch, Michael and Gall, Harald C.},
-  booktitle = {{Proceedings of the 14th Working Conference on Reverse Engineering (WCRE 2007)}},
+  booktitle = {{Proceedings of the 14th Working Conference on Reverse Engineering}},
   doi = {10.1109/wcre.2007.21},
   organization = {IEEE},
   pages = {70--79},
@@ -1249,7 +1249,7 @@
   author = {Bieman, James M. and Kang, Byung-Kyoo},
   doi = {10.1145/223427.211856},
   journal = {{SIGSOFT Software Engineering Notes}},
-  number = {5I},
+  number = {51},
   pages = {259--262},
   publisher = {ACM},
   title = {{Cohesion and Reuse in an Object-Oriented System}},
