quote about quality of review

--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -184,6 +184,12 @@ end
   {rigby2011understanding}
 
 \qte
+  [Vipin Balachandran]
+  {vipin-balachandran.jpg}
+  {Through a user study, we show that integrating static analysis tools (Checkstyle, PMD, and FindBugs) with code review process can improve the \ul{quality of code review}. The developer feedback for a subset of comments from automatic reviews shows that the developers agree to fix 93\% of all the automatically generated comments.}
+  {balachandran2013reducing}
+
+\qte
   [Moritz Beller]
   {moritz-beller.jpg}
   {Most Automated Static Analysis Tools configurations deviate slightly from the \ul{default}, but hardly any introduce new custom analyses. }
