--- a/main.bib
+++ b/main.bib
@@ -1953,3 +1953,12 @@
   year = {2017},
 }
 
+@inproceedings{balachandran2013reducing,
+  title={Reducing Human Effort and Improving Quality in Peer Code Reviews using Automatic Static Analysis and Reviewer Recommendation},
+  author={Balachandran, Vipin},
+  booktitle={Proceedings of the 35th International Conference on Software Engineering (ICSE)},
+  pages={931--940},
+  year={2013},
+  organization={IEEE},
+  doi={10.1109/ICSE.2013.6606642}
+}
