--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -28,6 +28,16 @@
 \plush{\sqmTitlePage{1}{q9Gr2xguP5I}}
 
 \qte
+  {lionel-deimel.jpg}
+  {One of the most overlooked programming skills is the ability to \ul{read} a program, an activity the programmer is called upon to do with surprising \ul{frequency}.}
+  {deimel1985uses}
+
+\qte
+  {darrell-raymond.jpg}
+  {Whatever approach is used, it is clear that a central activity in software maintenance is \ul{reading}. In maintenance, the main role of source code is not as a compilable entity, but as a human-readable statement of the intent and mechanism of the program.}
+  {raymond1991reading}
+
+\qte
   [Shari Lawrence Pfleeger]
   {shari-lawrence-pfleeger.jpg}
   {It's not enough to make claims about your software; you must support your claims with \ul{measurable evidence}.}
