--- a/main.bib
+++ b/main.bib
@@ -1962,3 +1962,23 @@
   organization={IEEE},
   doi={10.1109/ICSE.2013.6606642}
 }
+
+@inproceedings{raymond1991reading,
+  title={{Reading Source Code}},
+  author={Raymond, Darrell R},
+  booktitle={{Proceedings of the Conference of the Centre for Advanced Studies on Collaborative Research}},
+  pages={3--16},
+  year={1991},
+  doi={10.5555/962111.962113}
+}
+
+@article{deimel1985uses,
+  title={{The Uses of Program Reading}},
+  author={Deimel Jr, Lionel E},
+  journal={{ACM SIGCSE Bulletin}},
+  volume={17},
+  number={2},
+  pages={5--14},
+  year={1985},
+  doi={10.1145/382204.382524}
+}
