--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -158,6 +158,21 @@ end
   {collberg1997taxonomy}
 
 \qte
+  [Raymond Buse]
+  {../20-commits-density/raymond-buse.jpg}
+  {Formally, we can characterize software readability as a mapping from a code sample to a finite score domain. We presented human annotators with a sequence of short code selections, called snippets. The annotators were asked to individually score each snippet based on their personal estimation of readability. Our metric for readability is \ul{derived} (using ML) from these judgments.}
+  {buse2009learning}
+
+\plush{
+  \begin{multicols}{2}
+  \includegraphics[width=.85\linewidth]{readability.png}
+  \par\columnbreak\par
+  ``We find, for example, that factors like 'average line length' and 'average number of identifiers per line' are very important to readability. Conversely, 'average
+identifier length' is not, in itself, a very predictive factor,''
+  \source{buse2009learning}
+  \end{multicols}}
+
+\qte
   [Cathal Boogerd]
   {cathal-boogerd.jpg}
   {First, there are 9 out of 72 rules for which violations were observed that perform significantly better than a random predictor at locating fault-related lines. Second, we observed a negative correlation between MISRA rule violations and observed faults. In addition, 29 out of 72 rules had a zero true positive rate. This makes it possible that adherence to the MISRA standard \ul{as a whole} would have made the software \ul{less reliable}.}
