--- a/main.bib
+++ b/main.bib
@@ -1982,3 +1982,15 @@
   year={1985},
   doi={10.1145/382204.382524}
 }
+
+@article{buse2009learning,
+  title={{Learning a Metric for Code Readability}},
+  author={Buse, Raymond P. L. and Weimer, Westley R.},
+  journal={{IEEE Transactions on Software Engineering}},
+  volume={36},
+  number={4},
+  pages={546--558},
+  year={2009},
+  publisher={IEEE},
+  doi={10.1109/TSE.2009.70}
+}
