--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -58,6 +58,11 @@
   {Studies have found that larger routines are more \ul{error-prone} than smaller ones. Keeping routines short helps reduce errors and makes the code easier to maintain.}
   {mcconnell2004code}
 
+\qte
+  {robert-martin}
+  {The first rule of functions is that they should be small. The second rule of functions is that they should be even smaller than that.}
+  {martin2008clean}
+
 \thought{It \ul{may} be wrong to measure productivity of a programmer by counting lines of code, but for the quality of code the LoC metric is a perfect indicator.}
 
 \thought{Instead of counting lines, it may be more reasonable to count NCSS (Non Commenting Source Statements), but not always.}
