--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -60,10 +60,15 @@
 
 \qte
   {robert-martin}
-  {The first rule of functions is that they should be small. The second rule of functions is that they should be even smaller than that.}
+  {The first rule of functions is that they should be \ul{small}. The second rule of functions is that they should be even \ul{smaller} than that.}
   {martin2008clean}
 
 \thought{It \ul{may} be wrong to measure productivity of a programmer by counting lines of code, but for the quality of code the LoC metric is a perfect indicator.}
+
+\plush{
+  \pptBanner{\texttt{cloc.pl}}
+  \pptPic{.65}{cloc.png}\par
+  \url{https://github.com/AlDanial/cloc}}
 
 \thought{Instead of counting lines, it may be more reasonable to count NCSS (Non Commenting Source Statements), but not always.}
 
