--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -72,6 +72,27 @@
 
 \thought{Instead of counting lines, it may be more reasonable to count NCSS (Non Commenting Source Statements), but not always.}
 
+\pptBanner{LoC vs NCSS}
+\begin{multicols}{2}
+{\small\begin{ffcode}
+#!/bin/bash
+set -e
+
+# Simple intro:
+printf "Hello, %s!
+  Your balance is %d." \
+  "${name}" \
+  "$(psql 'SELECT balance
+    FROM user WHERE id = 42')"
+\end{ffcode}
+}
+\par\columnbreak\par
+Lines of Code = ?
+\par
+NCSS = ?
+\end{multicols}
+\plush{}
+
 \thought{There are \href{https://www.linux.com/news/linux-in-2020-27-8-million-lines-of-code-in-the-kernel-1-3-million-in-systemd/}{27.8M} lines of C code in Linux kernel. What does it tell us?}
 
 \thought{In 2011, Uncle Bob \href{https://softwareengineering.stackexchange.com/questions/66523}{suggested} that 200 lines per Java class is a good guideline to stay below.}
