--- a/sqm.sty
+++ b/sqm.sty
@@ -33,6 +33,7 @@
 \RequirePackage[nocn,novert]{ffcode}
 \RequirePackage{bibentry}
 \RequirePackage{underscore}
+\RequirePackage{to-be-determined}
 \RequirePackage{natbib}
 \RequirePackage{doi}
 \RequirePackage{booktabs}
