--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -95,6 +95,15 @@ NCSS = ?
 
 \thought{There are \href{https://www.linux.com/news/linux-in-2020-27-8-million-lines-of-code-in-the-kernel-1-3-million-in-systemd/}{27.8M} lines of C code in Linux kernel. What does it tell us?}
 
+\plush{
+  \pptBanner{Largest Open Source Projects}
+  \begin{multicols}{2}
+  \includegraphics[width=.8\linewidth]{largest.png}\par
+  {\scriptsize Found it on \href{https://www.quora.com/What-are-some-open-source-projects-with-the-largest-complexity-by-lines-of-code-or-developer-effort/answer/Felix-Zaslavskiy}{Quora}.\par}
+  \par\columnbreak\par
+  \tbd{what}
+  \end{multicols}}
+
 \thought{In 2011, Uncle Bob \href{https://softwareengineering.stackexchange.com/questions/66523}{suggested} that 200 lines per Java class is a good guideline to stay below.}
 
 \thought{Java is \href{http://jameshfisher.github.io/languageredundancy/}{two times} more verbose than Ruby. Does it mean the quality of an average Ruby code is higher?}
