--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -46,6 +46,11 @@
 
 \thought{Code \ul{maintainability}, probably, is the ultimate objective of increasing the quality of source code.}
 
+\qte
+  {robert-martin}
+  {Indeed, the ratio of time spent reading vs. writing is well over 10:1. We are constantly reading old code as part of the effort to write new code. Because this ratio is so high, we want the reading of code to be easy, even if it makes the writing harder.}
+  {martin2008clean}
+
 \thought{Code \ul{size} makes the biggest negative impact on code maintainability.}
 
 \qte
