--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -44,6 +44,11 @@
 
 \thought{Everybody wants higher \ul{quality of code}, but nobody knows how to measure it.}
 
+\qte
+  {fred-brooks}
+  {A programmer depends upon other people's programs. These are often maldesigned, poorly implemented, incompletely delivered (no source code or test cases), and poorly documented. So he must spend hours studying and fixing things that in an ideal world would be complete, available, and usable.}
+  {brooks1995mythical}
+
 \thought{Code \ul{maintainability}, probably, is the ultimate objective of increasing the quality of source code.}
 
 \qte
@@ -106,7 +111,10 @@ NCSS = ?
   \includegraphics[width=.8\linewidth]{largest.png}\par
   {\scriptsize Found it on \href{https://www.quora.com/What-are-some-open-source-projects-with-the-largest-complexity-by-lines-of-code-or-developer-effort/answer/Felix-Zaslavskiy}{Quora}.\par}
   \par\columnbreak\par
-  \tbd{what}
+  How many lines of code are in your repositories?
+  How many lines of code you write every week?
+  How many lines of code you delete every week?
+  How about annually?
   \end{multicols}}
 
 \thought{In 2011, Uncle Bob \href{https://softwareengineering.stackexchange.com/questions/66523}{suggested} that 200 lines per Java class is a good guideline to stay below.}
