--- a/main.bib
+++ b/main.bib
@@ -119,6 +119,7 @@
   publisher = {Pearson Education},
   title = {{The Mythical Man-Month: Essays on Software Engineering}},
   year = {1995},
+  doi={10.5555/540031}
 }
 
 @article{boehm1984software,
