--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -52,6 +52,11 @@
 \thought{Code \ul{maintainability}, probably, is the ultimate objective of increasing the quality of source code.}
 
 \qte
+  {harold-abelson}
+  {We want to establish the idea that a computer language is not just a way of getting a computer to perform operations but rather that it is a novel \ul{formal medium} for expressing ideas about methodology. Thus, programs must be written for people to read, and only \ul{incidentally} for machines to execute.}
+  {abelson1996structure}
+
+\qte
   {robert-martin}
   {Indeed, the ratio of time spent reading vs. writing is well over 10:1. We are constantly reading old code as part of the effort to write new code. Because this ratio is so high, we want the reading of code to be easy, even if it makes the writing harder.}
   {martin2008clean}
