--- a/main.bib
+++ b/main.bib
@@ -2007,3 +2007,11 @@
   publisher={ACM},
   doi={10.1145/355604.361591}
 }
+
+@book{abelson1996structure,
+  title={{Structure and Interpretation of Computer Programs}},
+  author={Abelson, Harold and Sussman, Gerald Jay},
+  year={1996},
+  publisher={The MIT Press},
+  doi= {10.5555/26777}
+}
